✨feat: add resetCollection rpc call
