# pkg/model/ortoo.grpc.pb.go
@@ -162,37 +162,39 @@ func init() {
 func init() { proto.RegisterFile("ortoo.grpc.proto", fileDescriptor_61fc1459943e44c7) }
 
 var fileDescriptor_61fc1459943e44c7 = []byte{
-	// 480 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x53, 0xc1, 0x6e, 0xd3, 0x40,
-	0x10, 0xc5, 0x89, 0x01, 0xb1, 0x05, 0x35, 0x2c, 0xa8, 0xb5, 0x2c, 0x30, 0xd6, 0x5e, 0x88, 0x90,
-	0x1a, 0x37, 0x06, 0x21, 0xd4, 0x72, 0x69, 0xc3, 0x85, 0x43, 0x55, 0xcb, 0xbd, 0x71, 0x5b, 0xec,
-	0x91, 0x63, 0xba, 0xf5, 0x6e, 0xbc, 0xeb, 0x54, 0x51, 0x65, 0x21, 0xf1, 0x09, 0x70, 0xe1, 0x93,
-	0x38, 0x22, 0xf1, 0x03, 0x28, 0xf0, 0x15, 0x9c, 0x90, 0xd7, 0x76, 0x5c, 0x51, 0xaa, 0x9c, 0xbc,
-	0xf3, 0xde, 0x8c, 0xdf, 0x7b, 0xb3, 0x36, 0x1a, 0xf0, 0x5c, 0x71, 0x3e, 0x4a, 0x72, 0x11, 0x8d,
-	0x44, 0xce, 0x15, 0xc7, 0x37, 0x35, 0x62, 0x6f, 0xd4, 0x84, 0xc6, 0xec, 0x47, 0x09, 0xe7, 0x09,
-	0x03, 0x8f, 0x8a, 0xd4, 0xa3, 0x59, 0xc6, 0x15, 0x55, 0x29, 0xcf, 0x64, 0xc3, 0xd6, 0x8f, 0x68,
-	0x27, 0x81, 0x6c, 0x87, 0x0b, 0xc8, 0xa8, 0x48, 0xe7, 0xbe, 0xc7, 0x85, 0xee, 0xb9, 0xda, 0x4f,
-	0x38, 0xda, 0x3c, 0xc9, 0xa8, 0x90, 0x53, 0xae, 0x42, 0x98, 0x15, 0x20, 0x15, 0x1e, 0xa0, 0xfe,
-	0x29, 0x2c, 0x2c, 0xc3, 0x35, 0x86, 0x77, 0xc2, 0xea, 0x88, 0x1d, 0x84, 0x22, 0xce, 0x18, 0x44,
-	0xd5, 0xa4, 0xd5, 0xd3, 0xc4, 0x25, 0x04, 0x63, 0x64, 0xc6, 0x45, 0x1a, 0x5b, 0x7d, 0xcd, 0xe8,
-	0x33, 0xde, 0x42, 0xa6, 0x94, 0x30, 0xb3, 0x4c, 0xd7, 0x18, 0x9a, 0x87, 0xbd, 0x5d, 0x23, 0xd4,
-	0x35, 0x39, 0x46, 0x83, 0x4e, 0x50, 0x0a, 0x9e, 0x49, 0xc0, 0x4f, 0x91, 0x79, 0x06, 0x8a, 0x6a,
-	0xc9, 0x0d, 0xff, 0xc1, 0xa8, 0x8e, 0xfb, 0x86, 0x2a, 0xaa, 0x16, 0x02, 0x8e, 0x40, 0xd1, 0x50,
-	0x37, 0x54, 0x42, 0x1f, 0xe4, 0xca, 0x82, 0x3e, 0xfb, 0x7f, 0xfa, 0xe8, 0xee, 0x71, 0x35, 0x70,
-	0x02, 0xf9, 0x3c, 0x8d, 0x00, 0x7f, 0x44, 0x9b, 0x41, 0xce, 0x23, 0x90, 0x32, 0x28, 0xe4, 0x34,
-	0x28, 0x18, 0xc3, 0x5b, 0xcd, 0x2b, 0x5b, 0xe0, 0x08, 0xa4, 0xa4, 0x09, 0xd8, 0xd7, 0xe0, 0xe4,
-	0xf5, 0xa7, 0x1f, 0xbf, 0xbf, 0xf4, 0x5e, 0x92, 0xb1, 0xde, 0xf2, 0x7c, 0xec, 0x75, 0x61, 0xa5,
-	0x77, 0xd1, 0x15, 0xa5, 0x27, 0x0a, 0x39, 0x15, 0x05, 0x63, 0x15, 0x5c, 0xa4, 0x71, 0xb9, 0x67,
-	0x3c, 0xc3, 0xe7, 0xe8, 0x5e, 0x63, 0x60, 0xc2, 0x52, 0xc8, 0x14, 0x7e, 0xd8, 0xc8, 0xd4, 0x65,
-	0x2b, 0xfe, 0x5f, 0x94, 0xec, 0x69, 0xe9, 0x17, 0xc4, 0x5b, 0x2b, 0x1d, 0xe9, 0xb9, 0xcb, 0xc2,
-	0x65, 0xb7, 0xdb, 0x76, 0x79, 0xab, 0xe8, 0xff, 0xdc, 0xb2, 0xbd, 0x7d, 0x05, 0xaf, 0x2f, 0x83,
-	0xbc, 0xd2, 0x06, 0x7c, 0xbc, 0xbb, 0xd6, 0x40, 0xdc, 0x68, 0x48, 0xef, 0xe2, 0x14, 0x16, 0x25,
-	0x9e, 0xa1, 0xfb, 0x93, 0x1c, 0xa8, 0x82, 0x49, 0x37, 0x81, 0xad, 0x36, 0xe5, 0x0a, 0x6b, 0xf3,
-	0x5f, 0xcb, 0x90, 0xa1, 0xb6, 0x40, 0x6c, 0x77, 0x9d, 0x85, 0xc3, 0xfd, 0xcf, 0x07, 0x4f, 0xf0,
-	0x63, 0xb4, 0xad, 0x3f, 0x00, 0x37, 0x09, 0x83, 0x89, 0x9b, 0x50, 0x05, 0xe7, 0x74, 0xe1, 0x1e,
-	0x04, 0x6f, 0xa5, 0xdf, 0x9b, 0x8f, 0xbf, 0x2d, 0x1d, 0xe3, 0xfb, 0xd2, 0x31, 0x7e, 0x2e, 0x1d,
-	0xe3, 0xeb, 0x2f, 0xe7, 0xc6, 0xbb, 0xdb, 0xa3, 0xfd, 0x33, 0x1e, 0x03, 0x7b, 0x7f, 0x4b, 0xff,
-	0x02, 0xcf, 0xff, 0x06, 0x00, 0x00, 0xff, 0xff, 0x91, 0x2c, 0x79, 0x01, 0x78, 0x03, 0x00, 0x00,
+	// 501 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x93, 0x41, 0x6e, 0xd3, 0x40,
+	0x14, 0x86, 0x71, 0x6a, 0x40, 0x4c, 0x41, 0x89, 0x06, 0xd4, 0x5a, 0x16, 0x18, 0xcb, 0x0b, 0x88,
+	0x90, 0x6a, 0x37, 0x06, 0x21, 0xd4, 0xb2, 0x69, 0xc3, 0x86, 0x45, 0x55, 0xcb, 0xdd, 0xb1, 0x1b,
+	0xec, 0x27, 0xc7, 0xd4, 0xf5, 0x4c, 0x3d, 0xe3, 0x54, 0x51, 0x15, 0x21, 0x71, 0x04, 0xd8, 0x70,
+	0x24, 0x96, 0x48, 0x5c, 0x00, 0x05, 0x0e, 0xc0, 0x11, 0x90, 0x9f, 0xed, 0xb8, 0xa2, 0x54, 0x59,
+	0x74, 0x95, 0x99, 0xff, 0xcd, 0xcb, 0xf7, 0xff, 0x6f, 0xc6, 0x64, 0xc0, 0x0b, 0xc5, 0xb9, 0x9b,
+	0x14, 0x22, 0x72, 0x45, 0xc1, 0x15, 0xa7, 0x37, 0x51, 0x31, 0xd7, 0xeb, 0x02, 0x6a, 0xe6, 0xc3,
+	0x84, 0xf3, 0x24, 0x03, 0x8f, 0x89, 0xd4, 0x63, 0x79, 0xce, 0x15, 0x53, 0x29, 0xcf, 0x65, 0x53,
+	0xad, 0x7f, 0xa2, 0xad, 0x04, 0xf2, 0x2d, 0x2e, 0x20, 0x67, 0x22, 0x9d, 0xfa, 0x1e, 0x17, 0x78,
+	0xe6, 0xf2, 0x79, 0x87, 0x93, 0xfe, 0x51, 0xce, 0x84, 0x9c, 0x70, 0x15, 0xc2, 0x69, 0x09, 0x52,
+	0xd1, 0x01, 0x59, 0x3b, 0x86, 0x99, 0xa1, 0xd9, 0xda, 0xf0, 0x4e, 0x58, 0x2d, 0xa9, 0x45, 0x48,
+	0xc4, 0xb3, 0x0c, 0xa2, 0xaa, 0xd3, 0xe8, 0x61, 0xe1, 0x82, 0x42, 0x29, 0xd1, 0xe3, 0x32, 0x8d,
+	0x8d, 0x35, 0xac, 0xe0, 0x9a, 0x6e, 0x10, 0x5d, 0x4a, 0x38, 0x35, 0x74, 0x5b, 0x1b, 0xea, 0xfb,
+	0xbd, 0x6d, 0x2d, 0xc4, 0xbd, 0x73, 0x48, 0x06, 0x1d, 0x50, 0x0a, 0x9e, 0x4b, 0xa0, 0x4f, 0x89,
+	0x7e, 0x02, 0x8a, 0x21, 0x72, 0xdd, 0xbf, 0xef, 0xd6, 0x71, 0xdf, 0x30, 0xc5, 0xd4, 0x4c, 0xc0,
+	0x01, 0x28, 0x16, 0xe2, 0x81, 0x0a, 0xf4, 0x41, 0x2e, 0x2d, 0xe0, 0xda, 0xff, 0xa3, 0x93, 0xbb,
+	0x87, 0x55, 0xc3, 0x11, 0x14, 0xd3, 0x34, 0x02, 0xfa, 0x91, 0xf4, 0x83, 0x82, 0x47, 0x20, 0x65,
+	0x50, 0xca, 0x49, 0x50, 0x66, 0x19, 0xdd, 0x68, 0xfe, 0xb2, 0x15, 0x0e, 0x40, 0x4a, 0x96, 0x80,
+	0x79, 0x85, 0xee, 0xbc, 0xfe, 0xf4, 0xe3, 0xf7, 0x97, 0xde, 0x4b, 0x67, 0x84, 0x53, 0x9e, 0x8e,
+	0xbc, 0x2e, 0xac, 0xf4, 0xce, 0xbb, 0xcd, 0xdc, 0x13, 0xa5, 0x9c, 0x88, 0x32, 0xcb, 0x2a, 0xb9,
+	0x4c, 0xe3, 0xf9, 0x8e, 0xf6, 0x8c, 0x9e, 0x91, 0x7b, 0x8d, 0x81, 0x71, 0x96, 0x42, 0xae, 0xe8,
+	0x83, 0x06, 0x53, 0x6f, 0x5b, 0xf8, 0x7f, 0x55, 0x67, 0x07, 0xd1, 0x2f, 0x1c, 0x6f, 0x25, 0x3a,
+	0xc2, 0xbe, 0x8b, 0xe0, 0x79, 0x37, 0xdb, 0x76, 0x78, 0xcb, 0xe8, 0xff, 0xdc, 0xb2, 0xb9, 0x79,
+	0x49, 0xaf, 0x2f, 0xc3, 0x79, 0x85, 0x06, 0x7c, 0xba, 0xbd, 0xd2, 0x40, 0xdc, 0x30, 0xa4, 0x77,
+	0x7e, 0x0c, 0xb3, 0x39, 0x15, 0x64, 0x30, 0x2e, 0x80, 0x29, 0x18, 0x77, 0x4f, 0xc3, 0x68, 0x43,
+	0x2e, 0xa5, 0x36, 0xfe, 0x95, 0x15, 0x67, 0x88, 0x0e, 0x1c, 0xd3, 0x5e, 0xe5, 0x80, 0x96, 0xa4,
+	0x1f, 0x82, 0x04, 0x75, 0x4d, 0xa0, 0x8b, 0xc0, 0xa1, 0xf9, 0x64, 0x65, 0xe4, 0xa2, 0xa2, 0xed,
+	0xef, 0x7e, 0xde, 0x7b, 0x4c, 0x1f, 0x91, 0x4d, 0x7c, 0x76, 0x76, 0x12, 0x06, 0x63, 0x3b, 0x61,
+	0x0a, 0xce, 0xd8, 0xcc, 0xde, 0x0b, 0xde, 0x4a, 0xbf, 0x37, 0x1d, 0x7d, 0x5b, 0x58, 0xda, 0xf7,
+	0x85, 0xa5, 0xfd, 0x5c, 0x58, 0xda, 0xd7, 0x5f, 0xd6, 0x8d, 0x77, 0xb7, 0xdd, 0xdd, 0x13, 0x1e,
+	0x43, 0xf6, 0xfe, 0x16, 0x7e, 0x78, 0xcf, 0xff, 0x06, 0x00, 0x00, 0xff, 0xff, 0x86, 0x50, 0xc7,
+	0x7d, 0xee, 0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -210,7 +212,8 @@ type OrtooServiceClient interface {
 	ProcessPushPull(ctx context.Context, in *PushPullMessage, opts ...grpc.CallOption) (*PushPullMessage, error)
 	ProcessClient(ctx context.Context, in *ClientMessage, opts ...grpc.CallOption) (*ClientMessage, error)
 	SnapshotDatatype(ctx context.Context, in *SnapshotRequest, opts ...grpc.CallOption) (*SnapshotResponse, error)
-	CreateCollections(ctx context.Context, in *CollectionMessage, opts ...grpc.CallOption) (*CollectionMessage, error)
+	CreateCollection(ctx context.Context, in *CollectionMessage, opts ...grpc.CallOption) (*CollectionMessage, error)
+	ResetCollection(ctx context.Context, in *CollectionMessage, opts ...grpc.CallOption) (*CollectionMessage, error)
 }
 
 type ortooServiceClient struct {
@@ -248,9 +251,18 @@ func (c *ortooServiceClient) SnapshotDatatype(ctx context.Context, in *SnapshotR
 	return out, nil
 }
 
-func (c *ortooServiceClient) CreateCollections(ctx context.Context, in *CollectionMessage, opts ...grpc.CallOption) (*CollectionMessage, error) {
+func (c *ortooServiceClient) CreateCollection(ctx context.Context, in *CollectionMessage, opts ...grpc.CallOption) (*CollectionMessage, error) {
 	out := new(CollectionMessage)
-	err := c.cc.Invoke(ctx, "/ortoo.OrtooService/CreateCollections", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/ortoo.OrtooService/CreateCollection", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *ortooServiceClient) ResetCollection(ctx context.Context, in *CollectionMessage, opts ...grpc.CallOption) (*CollectionMessage, error) {
+	out := new(CollectionMessage)
+	err := c.cc.Invoke(ctx, "/ortoo.OrtooService/ResetCollection", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -262,7 +274,8 @@ type OrtooServiceServer interface {
 	ProcessPushPull(context.Context, *PushPullMessage) (*PushPullMessage, error)
 	ProcessClient(context.Context, *ClientMessage) (*ClientMessage, error)
 	SnapshotDatatype(context.Context, *SnapshotRequest) (*SnapshotResponse, error)
-	CreateCollections(context.Context, *CollectionMessage) (*CollectionMessage, error)
+	CreateCollection(context.Context, *CollectionMessage) (*CollectionMessage, error)
+	ResetCollection(context.Context, *CollectionMessage) (*CollectionMessage, error)
 }
 
 // UnimplementedOrtooServiceServer can be embedded to have forward compatible implementations.
@@ -278,8 +291,11 @@ func (*UnimplementedOrtooServiceServer) ProcessClient(ctx context.Context, req *
 func (*UnimplementedOrtooServiceServer) SnapshotDatatype(ctx context.Context, req *SnapshotRequest) (*SnapshotResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SnapshotDatatype not implemented")
 }
-func (*UnimplementedOrtooServiceServer) CreateCollections(ctx context.Context, req *CollectionMessage) (*CollectionMessage, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method CreateCollections not implemented")
+func (*UnimplementedOrtooServiceServer) CreateCollection(ctx context.Context, req *CollectionMessage) (*CollectionMessage, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateCollection not implemented")
+}
+func (*UnimplementedOrtooServiceServer) ResetCollection(ctx context.Context, req *CollectionMessage) (*CollectionMessage, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ResetCollection not implemented")
 }
 
 func RegisterOrtooServiceServer(s *grpc.Server, srv OrtooServiceServer) {
@@ -340,20 +356,38 @@ func _OrtooService_SnapshotDatatype_Handler(srv interface{}, ctx context.Context
 	return interceptor(ctx, in, info, handler)
 }
 
-func _OrtooService_CreateCollections_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _OrtooService_CreateCollection_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(CollectionMessage)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(OrtooServiceServer).CreateCollections(ctx, in)
+		return srv.(OrtooServiceServer).CreateCollection(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/ortoo.OrtooService/CreateCollections",
+		FullMethod: "/ortoo.OrtooService/CreateCollection",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(OrtooServiceServer).CreateCollections(ctx, req.(*CollectionMessage))
+		return srv.(OrtooServiceServer).CreateCollection(ctx, req.(*CollectionMessage))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _OrtooService_ResetCollection_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CollectionMessage)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(OrtooServiceServer).ResetCollection(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/ortoo.OrtooService/ResetCollection",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(OrtooServiceServer).ResetCollection(ctx, req.(*CollectionMessage))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -375,8 +409,12 @@ var _OrtooService_serviceDesc = grpc.ServiceDesc{
 			Handler:    _OrtooService_SnapshotDatatype_Handler,
 		},
 		{
-			MethodName: "CreateCollections",
-			Handler:    _OrtooService_CreateCollections_Handler,
+			MethodName: "CreateCollection",
+			Handler:    _OrtooService_CreateCollection_Handler,
+		},
+		{
+			MethodName: "ResetCollection",
+			Handler:    _OrtooService_ResetCollection_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
